<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imagenreport"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tarea_shape"
            android:orientation="vertical"

            android:id="@+id/linearlayoutreport">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/titulo"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textAllCaps="true"/>
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/descripcion"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/a_las"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tvDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/hecho"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="18sp" />

        </LinearLayout>


</LinearLayout>