<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoneutro"
    android:visibility="visible"
    android:gravity="center">

    <EditText
        android:id="@+id/titulodetalle2"
        android:layout_width="184dp"
        android:layout_height="135dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:hint="@string/titulo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/descripciondetalle2"
        android:layout_width="325dp"
        android:layout_height="281dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:hint="@string/descripcion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="#F6050000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagendetalle2"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/horadetalle2"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:hint="@string/hora"
        android:importantForAutofill="no"
        android:inputType="time"
        android:textColor="#050000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulodetalle2"
        app:layout_constraintVertical_bias="0.014" />

    <ImageView
        android:id="@+id/imagendetalle2"
        android:layout_width="157dp"
        android:layout_height="128dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />


    <Button
        android:id="@+id/botonguardaredicion"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:text="@string/guardar_edicion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripciondetalle2"
        app:layout_constraintVertical_bias="0.578" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>