<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/tarea_shape">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="monospace"
        android:text="@string/titulo"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:gravity="center"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="100dp">

            <TextView
                android:id="@+id/hora"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="monospace"
                android:text="@string/a_las"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp"
                />

            <CheckBox

                android:id="@+id/cbhecho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:fontFamily="monospace"
                android:text="@string/hecho"
                android:textSize="18dp"
                android:textColor="@color/design_default_color_on_secondary"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewestado"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@color/design_default_color_on_primary" />

    </LinearLayout>

</LinearLayout>