<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondocuadrados"
    tools:context=".DetalleTareaTuteladoActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/linearLayout10"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/borde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136">

        <ImageView
            android:id="@+id/imagendetallehijo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/todo"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/titulodetallehijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:gravity="center"
            android:text="@string/titulo"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/descripciondetallehijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B5B0CEDA"
            android:gravity="center"
            android:text="@string/descripcion"
            android:textAllCaps="true"
            android:textColor="#F6050000"
            android:textSize="30sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/horadetallehijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:gravity="center"
            android:text="@string/hora"
            android:textAllCaps="true"
            android:textColor="#050000"
            android:textSize="30sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/cbhechocambiar"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_marginStart="11dp"
                android:gravity="center"
                android:textColor="#000000"
                android:scaleY="2"
                android:scaleX="2"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="He terminado"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textColor="#050000"/>

        </LinearLayout>

        <Button
            android:id="@+id/botonguardarhecho"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/guardar"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
    <!--<FrameLayout
        android:name="com.example.tfgkotlin.BlankFragment"
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="GONE"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>